Issue with linking to rigs running Blender in new depsgraph mode #46723

Closed
opened 2015-11-08 12:40:14 +01:00 by S J Bennett · 9 comments
Member

System Information
Windows 7 64-bit, NVidia GeForce GTX 580

Blender Version
Broken: 2.76b running with --enable-new-depsgraph flag

Short description of error

Exact steps for others to reproduce the error

  • Start blender with --enable-new-depsgraph option
  • From default scene, create the default armature with one bone.
  • Parent Armature to Default Cube with Automatic Weights. (select Cube, select Armature, Ctrl+P, Automatic Weights)
  • Select Armature. Switch to Pose Mode, confirm that transforming Bone moves the Cube with it.
  • Group Armature and Default Cube into group TestCube (select both, Ctrl+G)
  • Save this file as testcube.blend
  • Start a new file.
  • Link the group TestCube into your scene
  • Make a proxy of the Armature (with instance selected, Ctrl+Alt+P, select "Armature")
  • With armature selected, go to Pose Mode and transform the bone

Note that
a) the bone doesn't transform the cube;
b) the rig is still visually present in the Linked instance, meaning there's two rigs on the screen;
c) if you save here and load the file back into Blender, the saved version doesn't work whether or not --enable-new-depsgraph was specified

If you repeat the steps above without --enable-new-depsgraph, the bone will transform the cube and the rig is no longer visible in the instanced version. If you save here and load it into Blender, it will work whether or not --enable-new-depsgraph was specified.

**System Information** Windows 7 64-bit, NVidia GeForce GTX 580 **Blender Version** Broken: 2.76b running with --enable-new-depsgraph flag **Short description of error** **Exact steps for others to reproduce the error** - Start blender with --enable-new-depsgraph option - From default scene, create the default armature with one bone. - Parent Armature to Default Cube with Automatic Weights. (select Cube, select Armature, Ctrl+P, Automatic Weights) - Select Armature. Switch to Pose Mode, confirm that transforming Bone moves the Cube with it. - Group Armature and Default Cube into group TestCube (select both, Ctrl+G) - Save this file as testcube.blend - Start a new file. - Link the group TestCube into your scene - Make a proxy of the Armature (with instance selected, Ctrl+Alt+P, select "Armature") - With armature selected, go to Pose Mode and transform the bone Note that a) the bone doesn't transform the cube; b) the rig is still visually present in the Linked instance, meaning there's two rigs on the screen; c) if you save here and load the file back into Blender, the saved version doesn't work whether or not --enable-new-depsgraph was specified If you repeat the steps above without --enable-new-depsgraph, the bone will transform the cube and the rig is no longer visible in the instanced version. If you save here and load it into Blender, it will work whether or not --enable-new-depsgraph was specified.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @quollism

Added subscriber: @quollism

Added subscriber: @mont29

Added subscriber: @mont29

Think this may have been already reported… Can you please:

  • Try the latest build from our buildbot.
  • Attach here simple .blend file to help reproducing the issue, as requested by template.
Think this may have been already reported… Can you please: * Try the latest build from [our buildbot](https://builder.blender.org/download). * Attach here simple .blend file to help reproducing the issue, as requested by template.
Author
Member

Using the latest buildbot version 8c84a18 for Win64. It's better but not 100% fixed.

The broken proxy problem gets fixed on the following events:

  • file is saved and reloaded
  • Hitting Undo (Ctrl-Z) after creating the proxy (!)

I haven't found other tricks to make it work aside from those two workarounds.

This is how it looks when it's bugging out.

buggy_behaviour.png

Here is the simple rig.

riggedcube.blend

Link this into a scene with Blender and follow from step 7 onwards. The rig is called RiggedCube. I can't attach broken files because they won't be broken when you load them due to the "in memory" nature of the bug. :)

Using the latest buildbot version 8c84a18 for Win64. It's better but not 100% fixed. The broken proxy problem gets fixed on the following events: - file is saved and reloaded - Hitting Undo (Ctrl-Z) after creating the proxy (!) I haven't found other tricks to make it work aside from those two workarounds. This is how it looks when it's bugging out. ![buggy_behaviour.png](https://archive.blender.org/developer/F254673/buggy_behaviour.png) Here is the simple rig. [riggedcube.blend](https://archive.blender.org/developer/F254671/riggedcube.blend) Link this into a scene with Blender and follow from step 7 onwards. The rig is called RiggedCube. I can't attach broken files because they won't be broken when you load them due to the "in memory" nature of the bug. :)
Sergey Sharybin was assigned by Bastien Montagne 2015-12-04 16:47:41 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

OK, thanks, now I can confirm the issue here with new depsgraph, sounds like some missing update of the graph maybe? @Sergey should know better. :)

OK, thanks, now I can confirm the issue here with new depsgraph, sounds like some missing update of the graph maybe? @Sergey should know better. :)

This issue was referenced by 08185d2af0

This issue was referenced by 08185d2af0b6851a37d56f7fa43dfcd22a30619b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46723
No description provided.