Fix T46723: Issue with linking to rigs running Blender in new depsgraph mode

This isn't really ideal fix, but currently i can't tell how proxies should work
with the new dependency graph. This backward links are crazy, non-threadsafe
and mindblowing. Need to do some smarter/easier system.